@startuml Slime Domination Class Diagram

' Package definitions
package com.main {
    class Main {
        - {static} WINDOW_WIDTH : int = 1600
        - {static} WINDOW_HEIGHT : int = 900
        - mainPanel : JPanel
        - cardLayout : CardLayout
        - player : PlayerSlime
        
        + Main()
        + showPanel(panelName : String) : void
        + startGame() : void
        + getPlayer() : PlayerSlime
        + resetPlayer() : void
        + {static} main(args : String[]) : void
    }
    
    class MenuPanel {
        - backgroundImage : BufferedImage
        - slimeImage : BufferedImage
        - mainFrame : Main
        
        + MenuPanel(mainFrame : Main)
        - loadImages() : void
        - createMenuButtons() : void
        - createStyledButton(text : String, font : Font, bgColor : Color, borderColor : Color) : JButton
        # paintComponent(g : Graphics) : void
        - startGame() : void
        - showStats() : void
        - showUpgrade() : void
    }
    
    class GamePanel {
        - mainFrame : Main
        - player : PlayerSlime
        - enemy : EnemySlime
        - backgroundImage : BufferedImage
        - playerIdleImage : BufferedImage
        - enemyIdleImage : BufferedImage
        - battleInProgress : boolean
        - battleLog : String
        - animationFrame : int
        - playerAttackThread : Thread
        - enemyAttackThread : Thread
        - battleLock : Object
        - playerAnimating : boolean {volatile}
        - enemyAnimating : boolean {volatile}
        
        + GamePanel(mainFrame : Main, player : PlayerSlime)
        - loadImages() : void
        - createUI() : void
        - startBattle() : void
        - startPlayerAttackThread() : void
        - startEnemyAttackThread() : void
        - playerAttack() : void
        - enemyAttack() : void
        - endBattle(playerWon : boolean) : void
        - nextRound() : void
        - retryRound() : void
        - returnToMenu() : void
        # paintComponent(g : Graphics) : void
        - drawHealthBar(g2d : Graphics2D, x : int, y : int, width : int, height : int, currentHP : int, maxHP : int, fullColor : Color, emptyColor : Color) : void
    }
    
    class UpgradeDialog {
        - player : PlayerSlime
        - skillPointsLabel : JLabel
        - healthStatLabel : JLabel
        - attackStatLabel : JLabel
        - attackSpeedStatLabel : JLabel
        - {static} HEALTH_COST : int = 1
        - {static} ATTACK_COST : int = 2
        - {static} ATTACK_SPEED_COST : int = 2
        - {static} HEALTH_UPGRADE : int = 20
        - {static} ATTACK_UPGRADE : double = 5.0
        - {static} ATTACK_SPEED_UPGRADE : double = 0.1
        
        + UpgradeDialog(mainFrame : Main, player : PlayerSlime)
        - setupUI() : void
        - createUpgradePanel(title : String, upgradeAmount : String, cost : int, color : Color, upgradeAction : Runnable) : JPanel
        - upgradeHealth() : void
        - upgradeAttack() : void
        - upgradeAttackSpeed() : void
        - updateLabels() : void
    }
}

package com.player {
    abstract class Player {
        - health : int
        - maxHealth : int
        - Damege : double
        - attackSpeed : double
        - name : String
        
        + Player()
        + getName() : String
        + setName(name : String) : void
        + getDamege() : double
        + setDamege(Damege : double) : void
        + getAttackSpeed() : double
        + setAttackSpeed(attackSpeed : double) : void
        + getHealth() : int
        + setHealth(health : int) : void
        + getMaxHealth() : int
        + setMaxHealth(maxHealth : int) : void
        + isAlive() : boolean
    }
    
    class PlayerSlime {
        - skillPoints : int
        - roundsWon : int
        
        + PlayerSlime()
        + getSkillPoints() : int
        + addSkillPoints(points : int) : void
        + spendSkillPoints(points : int) : boolean
        + getRoundsWon() : int
        + incrementRoundsWon() : void
        + resetForNewRound() : void
        + takeDamage(damage : double) : void
        + upgradeMaxHealth(amount : int) : void
        + upgradeAttack(amount : double) : void
        + upgradeAttackSpeed(amount : double) : void
    }
    
    class EnemySlime {
        - level : int
        
        + EnemySlime(level : int)
        + getLevel() : int
        + takeDamage(damage : double) : void
    }
}

' Inheritance relationships
Player <|-- PlayerSlime
Player <|-- EnemySlime

' Composition and Aggregation relationships
Main *-- MenuPanel : contains
Main *-- GamePanel : contains
Main *-- PlayerSlime : manages
GamePanel o-- PlayerSlime : uses
GamePanel *-- EnemySlime : creates
MenuPanel o-- Main : references
GamePanel o-- Main : references
UpgradeDialog o-- PlayerSlime : modifies
UpgradeDialog o-- Main : references

' Java Swing inheritance (simplified)
JFrame <|-- Main
JPanel <|-- MenuPanel
JPanel <|-- GamePanel
JDialog <|-- UpgradeDialog

@enduml
